Don't crash at application exit

Qt Quick may destroy objects after QGuiApplication shutdown. It is
not possible to call any QOpenGL functions at that point
(including QOpenGLContext::currentContext()), and there is no
point since the graphics resources will be released by the system
anyway.

Fixes: QTBUG-76053
Change-Id: Ic86c8fb5a34126ab03178cda3071d712582ed496
Reviewed-by: Johan Helsing <johan.helsing@qt.io>
 
(cherry picked from commit 280d0e557eabe9410632edf32ed46e712535c45b)
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>